[package]
name = "tturn"
version = "0.1.0"
edition = "2021"

[lib]
path = "native/lib.rs"
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22"
hmac = "0.12"
napi = { version = "2", default-features = false, features = ["napi8"] }
napi-derive = "2"
sha1 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "net"] }
turn = "0.17"
util = { package = "webrtc-util", version = "0.17" }

[build-dependencies]
napi-build = "2"
